[gd_scene load_steps=10 format=4]

[ext_resource type="Script" path="res://Card System/card_half.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://cqbacdqoisbp7" path="res://Card System/card_visual_half.tscn" id="2"]
[ext_resource type="PackedScene" uid="uid://wvmjpaju54uw" path="res://Card System/inspect_card.tscn" id="3"]
[ext_resource type="Shader" path="res://Shaders/fake_3d.gdshader" id="4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jnbx5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ihpit"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0bnm0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8j2k3"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_vlul5"]
resource_local_to_scene = true
shader = ExtResource("4")
shader_parameter/fov = 90.0
shader_parameter/cull_back = true
shader_parameter/y_rot = 0.0
shader_parameter/x_rot = 0.0
shader_parameter/inset = 0.0

[node name="CardHalf" type="Control"]
custom_minimum_size = Vector2(228, 186)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -114.0
offset_top = -93.0
offset_right = 114.0
offset_bottom = 93.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(114, 93)
script = ExtResource("1")

[node name="CardVisualSmall" parent="." instance=ExtResource("2")]
layout_mode = 1
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 0.0
offset_top = 0.0
offset_right = 228.0
offset_bottom = 186.0
grow_horizontal = 1
grow_vertical = 1
pivot_offset = Vector2(114, 93)

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/disabled = SubResource("StyleBoxEmpty_jnbx5")
theme_override_styles/hover = SubResource("StyleBoxEmpty_ihpit")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_0bnm0")
theme_override_styles/normal = SubResource("StyleBoxEmpty_8j2k3")

[node name="InspectCard" parent="." instance=ExtResource("3")]
top_level = true
material = SubResource("ShaderMaterial_vlul5")
layout_mode = 1
offset_left = -432.0
offset_top = -192.0
offset_right = -204.0
offset_bottom = 144.0

[connection signal="gui_input" from="Button" to="." method="_on_button_gui_input"]
[connection signal="mouse_entered" from="Button" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_button_mouse_exited"]
